--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -4,11 +4,13 @@
 	margin-right: 20%;
 }
 
-.md-toolbar {
-	background-color: rgb(29, 49, 95);
-}
 #sbricksHeader {
 	background-color: white;
 	height: 100%;
 	max-height: 100%;
+}
+
+#serviceThumbs {
+	width: 100px;
+	height: 100px;
 }
